--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "quill-emoji": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.24.0",
     "react-select": "^5.8.0",
     "recharts": "^2.12.7"
