--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
 DATABASE = "mongodb+srv://dev:svNdTsS9Twk8jnCu@billbizz.val4sxs.mongodb.net/BillBizz?retryWrites=true&w=majority&appName=BillBizz"
-# PORT = 3000
 
+ENCRYPTION_KEY = devcygnozzbillbizzdevcygnozzbill
 
-
-
-# DATABASE = mongodb+srv://galleryvision:E80Cha76i9vA5jRY@galleryvision.43un76r.mongodb.net/GalleryVision?retryWrites=true&w=majority&appName=GalleryVision
-
+ENCRYPTION_IV = 54634billbizzdev
