--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-
+VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/%22"
+VITE_REACT_APP_CUSTOMERS=""
+VITE_REACT_APP_INVENTORY="http://inventory-api.dev-billbizz:5003"
+VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004"
+VITE_REACT_APP_PURCHASE=""
+VITE_REACT_APP_REPORT=""
+VITE_REACT_APP_SALES=""
+VITE_REACT_APP_STAFF=""
+VITE_REACT_APP_SUPPLIER=""
