--- a/.env
+++ b/.env
@@ -1,13 +1,23 @@
-VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/%22/"
-VITE_REACT_APP_CUSTOMERS=""
-VITE_REACT_APP_INVENTORY="https://inventory-api.dev-billbizz:5003/"
-VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004/"
-VITE_REACT_APP_PURCHASE=""
-VITE_REACT_APP_REPORT=""
-VITE_REACT_APP_SALES=""
-VITE_REACT_APP_STAFF=""
-VITE_REACT_APP_SUPPLIER=""
+# VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/%22/"
+# VITE_REACT_APP_CUSTOMERS=""
+# VITE_REACT_APP_INVENTORY="https://inventory-api.dev-billbizz:5003/"
+# VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004/"
+# VITE_REACT_APP_PURCHASE=""
+# VITE_REACT_APP_REPORT=""
+# VITE_REACT_APP_SALES=""
+# VITE_REACT_APP_STAFF=""
+# VITE_REACT_APP_SUPPLIER=""
 
+
+VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_INVENTORY="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_SALES="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_STAFF="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
 
 
 # VITE_REACT_APP_ACCOUNTS="http://localhost:5001/"
