--- a/.env
+++ b/.env
@@ -9,23 +9,23 @@
 # VITE_REACT_APP_SUPPLIER=""
 
 
-VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/"
-VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
-VITE_REACT_APP_INVENTORY="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5003/"
-VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004/"
-VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
-VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
-VITE_REACT_APP_SALES="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5007/"
-VITE_REACT_APP_STAFF="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5008/"
-VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5009/"
+# VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/"
+# VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
+# VITE_REACT_APP_INVENTORY="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5003/"
+# VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004/"
+# VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
+# VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+# VITE_REACT_APP_SALES="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5007/"
+# VITE_REACT_APP_STAFF="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5008/"
+# VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5009/"
 
 
-# VITE_REACT_APP_ACCOUNTS="http://localhost:5001/"
-# VITE_REACT_APP_CUSTOMERS="http://localhost:5002/"
-# VITE_REACT_APP_INVENTORY="http://localhost:5003/"
-# VITE_REACT_APP_ORGANIZATION="http://localhost:5004/"
-# VITE_REACT_APP_PURCHASE="http://localhost:5005/"
-# VITE_REACT_APP_REPORT="http://localhost:5006/"
-# VITE_REACT_APP_SALES="http://localhost:5007/"
-# VITE_REACT_APP_STAFF="http://localhost:5008/"
-# VITE_REACT_APP_SUPPLIER="http://localhost:5009/"
+VITE_REACT_APP_ACCOUNTS="http://localhost:5001/"
+VITE_REACT_APP_CUSTOMERS="http://localhost:5002/"
+VITE_REACT_APP_INVENTORY="http://localhost:5003/"
+VITE_REACT_APP_ORGANIZATION="http://localhost:5004/"
+VITE_REACT_APP_PURCHASE="http://localhost:5005/"
+VITE_REACT_APP_REPORT="http://localhost:5006/"
+VITE_REACT_APP_SALES="http://localhost:5007/"
+VITE_REACT_APP_STAFF="http://localhost:5008/"
+VITE_REACT_APP_SUPPLIER="http://localhost:5009/"
