--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 
 VITE_REACT_APP_ACCOUNTS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5001/"
 VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
-VITE_REACT_APP_INVENTORY="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5003/"
-VITE_REACT_APP_INVENTORY="https://fiy4asdfkk.execute-api.ap-south-1.amazonaws.com/dev"
+VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
 VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5004/"
 VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
 VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
