--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ VITE_REACT_APP_ORGANIZATION="https://billbizz-alb-front-269260655.ap-south-1.elb
 VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
 VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
 VITE_REACT_APP_SALES="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5007/"
-VITE_REACT_APP_STAFF="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5008/"
+VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
 VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5009/"
 
 
