--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.am
 VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
 VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
 VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
-VITE_REACT_APP_REPORT="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5006/"
+VITE_REACT_APP_REPORT="https://report-api.dev.billbizz.cloud:5006"
 VITE_REACT_APP_SALES="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5007/"
 VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
 VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5009/"
