--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.ama
 VITE_REACT_APP_REPORT="https://report-api.dev.billbizz.cloud:5006"
 VITE_REACT_APP_SALES="https://sales-api.dev.billbizz.cloud:5007"
 VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
-VITE_REACT_APP_SUPPLIER="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5009/"
+VITE_REACT_APP_SUPPLIER="https://suppliers-api.dev.billbizz.cloud:5009"
 
 
 # VITE_REACT_APP_ACCOUNTS="http://localhost:5001/"
