--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "papaparse": "^5.4.1"
   }
 }
