--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE = "mongodb+srv://dev:svNdTsS9Twk8jnCu@billbizz.val4sxs.mongodb.net/BillBizz?retryWrites=true&w=majority&appName=BillBizz"
 
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=bbbillbizz7352
 
-EMAIL = temp@temp.com
+EMAIL = galleryvision24@gmail.com
 
-PASSWORD = temp
+PASSWORD = cles pbrx btua qvbc
