--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^5.0.0",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4"
   }
