--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE = "mongodb+srv://dev:svNdTsS9Twk8jnCu@billbizz.val4sxs.mongodb.net/BillBizz?retryWrites=true&w=majority&appName=BillBizz"
 
-ENCRYPTION_KEY = devcygnozzbillbizzdevcygnozzbill
+ENCRYPTION_KEY = devcygnozzbillbizzdevcygnozzbill #32
 
-ENCRYPTION_IV = 54634billbizzdev
+ENCRYPTION_IV = billbizz3457 #12
