--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_REACT_APP_ACCOUNTS="https://account-api.dev.billbizz.cloud:5001"
-VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
+# VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
 VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
 VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
 VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
@@ -11,7 +11,7 @@ VITE_REACT_APP_SUPPLIER="https://suppliers-api.dev.billbizz.cloud:5009"
 
 
 # VITE_REACT_APP_ACCOUNTS="http://localhost:5001/"
-# VITE_REACT_APP_CUSTOMERS="http://localhost:5002/"
+VITE_REACT_APP_CUSTOMERS="http://localhost:5002/"
 # VITE_REACT_APP_INVENTORY="http://localhost:5003/"
 # VITE_REACT_APP_ORGANIZATION="http://localhost:5004/"
 # VITE_REACT_APP_PURCHASE="http://localhost:5005/"
