--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.654.0",
     "@aws-sdk/client-ssm": "^3.654.0",
+    "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
