--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DATABASE = "mongodb+srv://dev:svNdTsS9Twk8jnCu@billbizz.val4sxs.mongodb.net/BillBizz?retryWrites=true&w=majority&appName=BillBizz"
 
+JWT_SECRET=bbbillbizz7352
+
 ENCRYPTION_KEY = devcygnozzbillbizzdevcygnozzbill #32
 
 ENCRYPTION_IV = billbizz3457 #12
