--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE = "mongodb+srv://dev:svNdTsS9Twk8jnCu@billbizz.val4sxs.mongodb.net/BillBizz?retryWrites=true&w=majority&appName=BillBizz"
 # PORT = 3000
 
-
+JWT_SECRET=bbbillbizz7352
 
 
 # DATABASE = mongodb+srv://galleryvision:E80Cha76i9vA5jRY@galleryvision.43un76r.mongodb.net/GalleryVision?retryWrites=true&w=majority&appName=GalleryVision
