--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ VITE_REACT_APP_ACCOUNTS="http://13.202.96.108:5001/"
 VITE_REACT_APP_CUSTOMERS="http://13.202.96.108:5002/"
 VITE_REACT_APP_INVENTORY="http://13.202.96.108:5003/"
 VITE_REACT_APP_ORGANIZATION="http://13.202.96.108:5004/"
-VITE_REACT_APP_PURCHASE=""
-VITE_REACT_APP_REPORT=""
-VITE_REACT_APP_SALES=""
-VITE_REACT_APP_STAFF=""
+VITE_REACT_APP_PURCHASE="http://13.202.96.108:5005/"
+VITE_REACT_APP_REPORT="http://13.202.96.108:5006/"
+VITE_REACT_APP_SALES="http://13.202.96.108:5007/"
+VITE_REACT_APP_STAFF="http://13.202.96.108:5009/"
 VITE_REACT_APP_SUPPLIER="http://13.202.96.108:5009/"
