--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# VITE_REACT_APP_ACCOUNTS="https://account-api.dev.billbizz.cloud:5001"
-# VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
-# VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
-# VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
-# VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
-# VITE_REACT_APP_REPORT="https://report-api.dev.billbizz.cloud:5006"
-# VITE_REACT_APP_SALES="https://sales-api.dev.billbizz.cloud:5007"
-# VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
-# VITE_REACT_APP_SUPPLIER="https://suppliers-api.dev.billbizz.cloud:5009"
+VITE_REACT_APP_ACCOUNTS="https://account-api.dev.billbizz.cloud:5001"
+VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
+VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
+VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
+VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
+VITE_REACT_APP_REPORT="https://report-api.dev.billbizz.cloud:5006"
+VITE_REACT_APP_SALES="https://sales-api.dev.billbizz.cloud:5007"
+VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
+VITE_REACT_APP_SUPPLIER="https://suppliers-api.dev.billbizz.cloud:5009"
 
 
 
@@ -21,12 +21,4 @@
 # VITE_REACT_APP_SUPPLIER="http://localhost:5009/"
 
 
-VITE_REACT_APP_ACCOUNTS="http://13.202.96.108:5001/"
-VITE_REACT_APP_CUSTOMERS="http://13.202.96.108:5002/"
-VITE_REACT_APP_INVENTORY="http://13.202.96.108:5003/"
-VITE_REACT_APP_ORGANIZATION="http://13.202.96.108:5004/"
-VITE_REACT_APP_PURCHASE="http://13.202.96.108:5005/"
-VITE_REACT_APP_REPORT="http://13.202.96.108:5006/"
-VITE_REACT_APP_SALES="http://13.202.96.108:5007/"
-VITE_REACT_APP_STAFF="http://13.202.96.108:5009/"
-VITE_REACT_APP_SUPPLIER="http://13.202.96.108:5009/"
+
