--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_REACT_APP_ACCOUNTS="https://account-api.dev.billbizz.cloud:5001"
-VITE_REACT_APP_CUSTOMERS="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5002/"
+VITE_REACT_APP_CUSTOMERS="https://customer-api.dev.billbizz.cloud:5002"
 VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
 VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
 VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
