--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ VITE_REACT_APP_ACCOUNTS="https://account-api.dev.billbizz.cloud:5001"
 VITE_REACT_APP_CUSTOMERS="https://customer-api.dev.billbizz.cloud:5002"
 VITE_REACT_APP_INVENTORY="https://inventory-api.dev.billbizz.cloud:5003"
 VITE_REACT_APP_ORGANIZATION="https://organization-api.dev.billbizz.cloud:5004/"
-VITE_REACT_APP_PURCHASE="https://billbizz-alb-front-269260655.ap-south-1.elb.amazonaws.com:5005/"
+VITE_REACT_APP_PURCHASE="https://purchase-api.dev.billbizz.cloud:5005"
 VITE_REACT_APP_REPORT="https://report-api.dev.billbizz.cloud:5006"
 VITE_REACT_APP_SALES="https://sales-api.dev.billbizz.cloud:5007"
 VITE_REACT_APP_STAFF="https://staff-api.dev-billbizz:5008"
