--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "clean-css": "^5.3.3",
+    "lodash": "^4.17.21",
     "quill-emoji": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -32,7 +34,7 @@
     "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.12.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "postcss": "^8.4.47",
